test/types/partial/issue-18005.prediff
../../functions/operatorOverloads/operatorMethods/nestedMethodBad.prediff